# recipe-duck

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
lambda/: .gitignore  Dockerfile.lambda  README.md  build_and_push_container.sh  lambda_handler.py  requirements.txt
src/recipe_duck/: __init__.py  cli.py  config.py  formatter.py  notion_client.py  processor.py  url_extractor.py
src/recipe_duck/templates/: recipe_template.md
terraform/: .gitignore  README.md  ecr.tf  lambda.tf  main.tf  outputs.tf  s3.tf  secrets.tf  ses.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_config.py  test_formatter.py  test_integration.py  test_notion_client.py  test_print_url_integration.py  test_url_extractor.py
tests/integration/: __init__.py  test_integration.py  test_notion_push.py  test_url_integration.py
tests/unit/: __init__.py  test_notion.py  test_url_extractor.py
